added website/tictac nodes

--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,13 @@
             onmouseout="hideImage('github')">
     </button>
 
+    <button class="node"
+            id="tictactoe"
+            onclick="window.open('https://github.com/A-Galicia/TikTacToe', '_blank')"
+            onmouseover="showImage('tictactoe','./images/tictactoe.jpg')"
+            onmouseout="hideImage('tictactoe')">
+    </button>
+
 
     <button class="node"
             id="linkedin"
@@ -32,6 +39,13 @@
             onclick="window.open('https://www.openpowerlifting.org/u/alfredogalicia', '_blank')"
             onmouseover="showImage('powerlifting','./images/openpowerlifting-logo.png')"
             onmouseout="hideImage('powerlifting')">
+    </button>
+
+    <button class="node"
+            id="website"
+            onclick="window.open('https://github.com/A-Galicia/nodejs-server', '_blank')"
+            onmouseover="showImage('website','./images/website.jpg')"
+            onmouseout="hideImage('website')">
     </button>
 
     <script src="js/main.js"></script>
